--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,30 @@
-#openMenu{
-  
+header{
+  width: 100%;
+  height: 80px;
+  background-color: #FC3666;
+  color: #fff;
+  position: relative;
+}
+
+header h1, header p{
+  margin: 0;
+  padding: 0;
+}
+
+header h1#brand{
+  position: absolute;
+  top: 20px;
+  left: 20px;
+}
+
+header #openMenu{
+  position: absolute;
+  top: 20px;
+  right: 20px;
+}
+
+footer{
+  width: 100%;
+  height: 50px;
+  background-color: #F7003E;
 }
