--- a/css/style.css
+++ b/css/style.css
@@ -27,4 +27,12 @@ footer{
   width: 100%;
   height: 50px;
   background-color: #F7003E;
+  color: #fff;
+}
+
+footer p#copy{
+  margin: 0;
+  padding: 0;
+  line-height: 50px;
+  text-align: center;
 }
