--- a/css/style.css
+++ b/css/style.css
@@ -23,6 +23,42 @@ header #openMenu{
   right: 20px;
 }
 
+header nav{
+  position: absolute;
+  top: 80px;
+  left: 0;
+  width: 500px;
+  height: 100%;
+  background-color: #fff;
+  /*display: none;*/
+  /*z-index: 1;*/
+}
+
+header nav ul{
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+
+header nav ul li{
+  padding: 10px;
+  border-top: 1px solid #c1c1c1;
+}
+
+header nav ul li a{
+  display: block;
+  width: 100%;
+  height: 100%;
+}
+
+header nav ul li:first-child{
+  border-top: 0;
+}
+
+header nav ul li:last-child{
+  border-bottom: 1px solid #c1c1c1;
+}
+
 footer{
   width: 100%;
   height: 50px;
