--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@ body{
   width: 100%;
   height: 100%;
   background-color: rgba(0,0,0,0.7);
-  z-index: 1; /* ヘッダー・ボディーより手前に */
+  z-index: 3; /* ヘッダー・ボディーより手前に */
   display: none;
 }
 /* ========================== */
@@ -22,6 +22,7 @@ header{
   position: fixed;
   top: 0;
   overflow-x: hidden; /* メニューが誤って表示されないように */
+  z-index: 2;
 }
 
 header h1, header p{
